--- a/gb/23/2/27/n13939555.md
+++ b/gb/23/2/27/n13939555.md
@@ -88,35 +88,32 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/29/n13875640.md#1">安情局警告渥京 中共干预渗透是全方位</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/9/n13926593.md#1">中共干扰选举疑有5年 加拿大政府未防范</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/20/n13934288.md#1">加拿大安全情报局曝光中共渗透商界细节</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/4/n14324342.md#1">传加航提出为飞行员加薪30% 以避免罢工</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/4/n14324298.md#1">加新民主党终止支持自由党 或引发提前大选</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/4/n14324295.md#1">加拿大央行降息至4.25% 强调防止经济下滑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/4/n14324278.md#1">加拿大某些食品杂货今年秋季即将降价</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544412.md#1">加拿大5月商品贸易逆差缩窄至59亿元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544410.md#1">联邦7月起减税 收入逾5.7万者获益最大</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544407.md#1">加拿大移民流出持续攀升 哪些人更倾向离开</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544380.md#1">职涯停滞被忽视 安省员工满意度全国垫底</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/14/n10393987.md#1" target="_blank">林辉：掩盖大饥荒真相 五省书记罪责难逃（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/7/16/n8107028.md#1" target="_blank">澳洲出新书 探究法轮功健身奇效背后奥秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/8/n10202468.md#1" target="_blank">林辉：“爱有阶级性”后的人伦惨剧</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/11/8/n4291474.md#1" target="_blank">明慧网编辑与一名大陆“610”人员的对话</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/21/n14295180.md#1">台湾纪录片《冲天》 国军飞行员抗日纪实</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/2/n14322241.md#1">美国防部前UFO专家：外星人有入侵地球计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/28/n14319491.md#1">穿越阴阳界的“走无常”怎看福祸根源? 信佛有无好处？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/31/n14321153.md#1">【未解之谜】CIA心灵部队（2）月球上的神秘身影</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/28/n14319721.md#1">马铃薯的故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14323136.md#1">【思想领袖】美教师谈真正的批判性思维</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/4/n14324321.md#1">【新闻欣视角】又一中共代理人被指控 震动华社</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/5/n14324520.md#1">【时事军事】南海冲突 对中共意味着什么</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/2/n14322643.md#1">外国人涌入日本 为何本土信用卡公司头疼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/2/n14322676.md#1">长春传杀警夺枪大案 大量武警及狙击手出动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/1/n14321619.md#1">华人和美国人爱吃 蓝蟹却成意大利厨师的挑战</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14322774.md#1">唐嫣为新戏剪掉招牌长发 新造型引两极反应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14323643.md#1">章子怡携女与国际影后合照 8岁醒醒不怯场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14322844.md#1">85岁“甘道夫”回归《魔戒》 盼剧组快上工</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/2/n14322720.md#1">裘莉威尼斯影展走红毯 手臂爆青筋意外抢镜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14323606.md#1">先后遭官方封杀 范冰冰与赵薇现复出信号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14323109.md#1">搭乘飞机要注意 行李箱系上这一物恐致延误</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/31/n14321266.md#1">哈佛新研究：预防主要慢性病的蔬果排行榜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14322949.md#1">为什么高个子比较可能罹患癌症？有解吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/2/n14322337.md#1">肌肉是人体最大的器官 具有重要功能</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/1/n14321933.md#1">《自然》发现鱼大小影响营养量 你选对了吗？</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545549.md#1">【军事情报局】美对台军售大升级 或逾200亿美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14545002.md#1">【直播】庆美国独立日 华府燃放烟火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540704.md#1">咖啡因会干扰睡眠期间大脑恢复 尤其对年轻人</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/27/n13939555.htm">中共干预加国大选 更多涉事政客被披露</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/2/27/n13939555.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
